2008-02-16  Robert Ancell  <robert.ancell@gmail.com>

        * src/lib/chess/board.py: Fix castling regression (Bug #516459)
	* src/lib/config.py: Catch GError exceptions from GConf (Bug #489878)

2008-02-11  Robert Ancell  <robert.ancell@gmail.com>

        * src/lib/gtkui/network.py: Handle unexpected throbber images (Bug #511693)
	* Fix a number of bugs when switching GGZ servers

2008-01-26  Andreas Røsdal  <andreasr@gnome.org>

	* data/ai.xml:
	* help/C/glchess.xml: Add support for Shredder Classic 3.

2008-01-25  Robert Ancell  <robert.ancell@gmail.com>

	* Set new/load/save/preferences/about dialogs to be transient of the main application
	  window (always centered and on top, not in window list) (Bug #510911).
        * src/lib/gtkui/network.py: Handle the case where the throbber image is only one
          frame (Bug #511693)

2008-01-20  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gtkui/dialogs.py:
	* src/lib/gtkui/gtkui.py:
	* src/lib/defaults.py.in:
	* glade/glchess.glade:
	* glade/Makefile.am:
	* glade/preferences.glade: Add preferece dialog and reorganize menus.
	Reported by Robert Ancell in bug #443447. Patch by me.

2008-01-12  Andreas Røsdal  <andreasr@gnome.org>

	* glade/glchess.glade:
	* glade/network_game.glade: Reuse strings from libgames-support, for string consolidation
	across games.

2008-01-12  Andreas Røsdal  <andreasr@gnome.org>

	* src/glchess.in.in: Port bugfix #406672 from sudoku to glChess.

2008-01-11  Andreas Røsdal  <andreasr@gnome.org>

	* /glade/glchess.glade: Move "View logs" to "View" menu. Patch from me in 
	bug #499519.

2008-01-10  Andreas Røsdal  <andreasr@gnome.org>

	* src/glchess.in:
	* src/glchess.in.in:
	* src/lib/defaults.py.in: Allow glChess to be run from source distribution, without
	requiring a full install. To run glChess from the source distribution, 
	simply execute make and then: $ python glchess/src/glchess

2007-12-27  Robert Ancell  <robert.ancell@gmail.com>
