@@ -2,6 +2,7 @@
 
         * src/lib/chess/board.py: Fix castling regression (Bug #516459)
 	* src/lib/config.py: Catch GError exceptions from GConf (Bug #489878)
+	* src/lib/scene/cairo/__init__.py: Pixel align the board (Bug #443451)
 
 2008-02-11  Robert Ancell  <robert.ancell@gmail.com>
 
